--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,7 @@
 
 <div class="container">
   <h2 class="text-center text-3xl md:text-4xl pt-24 font-bold">Sign Up</h2>
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "flex justify-center flex-col max-w-2xl align-middle m-auto gap-4 bg-indigo-200 p-5 rounded-md shadow-md mt-3 pt-12" }) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), data: { turbo: false },html: { class: "flex justify-center flex-col max-w-2xl align-middle m-auto gap-4 md:bg-indigo-200 p-5 rounded-md shadow-md mt-3 pt-12" }) do |f| %>
     <div class="field m-auto">
       <%= f.label :username, class: "font-medium text-gray-600" %><br />
       <%= f.text_field :username, autofocus: true, autocomplete: "username", class: "rounded-md bg-transparent border-indigo-300 border-2" %>
@@ -25,7 +24,9 @@
       <%= f.label :password_confirmation, class: "font-medium text-gray-600" %><br />
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "rounded-md bg-transparent border-indigo-300 border-2" %>
     </div>
-
+    <div class="m-auto">
+      <%= render "devise/shared/error_messages", resource: resource %>
+    </div>
     <div class="actions m-auto mt-2">
       <%= f.submit "Sign up", class: "transform rounded-md bg-indigo-600/95 px-5 py-3 font-medium text-white transition-colors hover:bg-indigo-700" %>
     </div>
