--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,24 @@
-Noice
+<div class="container">
+  <div class="m-8 px-12 p-6 bg-gray-100 rounded-md">
+    <h1 class="font-bold text-4xl"><%= @post.title %></h1>
+    <div class="my-5">
+      <p class="text-sm font-semibold text-gray-600">@<%= @post.member.username %></p>
+    </div>
+    <div class="my-5">
+      <p class="text-sm font-semibold text-gray-600"><%= @post.created_at %></p>
+    </div>
+    <div class="my-5">
+      <p><%= @post.body %></p>
+    </div>
+  </div>
+
+    <div class="flex gap-4 m-8">
+      <%= link_to '<button class="transform rounded-md px-5 py-3 font-medium text-white transition-colors hover:bg-indigo-700 bg-indigo-500">Back</button>
+        '.html_safe, posts_path %>
+      <% if @post.member_id == current_member.try(:id) %>
+        <%= link_to '<button class="transform rounded-md px-5 py-3 font-medium text-white transition-colors hover:bg-yellow-500 bg-yellow-400">Edit Post</button>'.html_safe, edit_post_path(@post) %>
+        <%= button_to "Delete Post", post_path(@post), data: { confirm: "Are you sure?" }, class: "transform rounded-md px-5 py-3 font-medium text-white transition-colors hover:bg-red-700 bg-red-500", method: :delete %>
+      <% end %>
+    </div>
+  </div>
+</div>
